...
    <string name="search">Search</string>
    <string name="clear_search">Clear search</string>
    <string name="library">Library</string>
    <string name="home">Home</string>
    <string name="play">Play</string>
...
    <string name="on_device">On Device</string>
    <string name="playlists">Playlists</string>
    <string name="new_playlist">New playlist</string>
    <string name="saved_to_youtube_music">Saved to YouTube Music</string>
    <string name="sign_in">Sign in</string>
...
    <string name="retry">Retry</string>
    <string name="shuffle">Shuffle</string>
    <string name="more">More</string>
    <string name="lyrics_offset">Lyrics offset</string>
    <string name="auto_quick_picks">Quick picks</string>
    <string name="auto_recents">Recent</string>
    <string name="auto_liked">Liked songs</string>
    <string name="auto_login_title">Sign in to YouTube on your phone</string>
    <string name="auto_login_subtitle">Open Daylight on your phone to sign in</string>
...
    <string name="auto_unavailable_title">Content unavailable</string>
    <string name="auto_unavailable_subtitle">Reopen the folder and try again</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_library">Add to library</string>
    <string name="remove_from_library">Remove from library</string>
...
    <string name="sign_in_discord">Sign in to Discord</string>
    <string name="personalized_recommendations">Get personalized recommendations for you</string>
    <string name="play_next">Play next</string>
    <string name="queue">Queue</string>
    <string name="source_unrecognised">Daylight could not tell what that link is</string>
...
    <string name="turkish">Turkish</string>
    <string name="thai">Thai</string>
    <string name="show_all">Show all</string>
    <string name="grid_view">Grid</string>
    <string name="list_view">List</string>
...
    <string name="pause_countdown">%1$s until playback pauses</string>
    <string name="play_to_preview">Play something to fill in the preview.</string>
    <string name="playlist_name">Playlist name</string>
    <string name="presence">Presence</string>
    <string name="preview">Preview</string>
...
    <string name="search_this_list">Search this list</string>
    <string name="second_button">Second button</string>
    <string name="share">Share</string>
    <string name="sharing_as">Sharing as @%1$s</string>
    <string name="sharing_listens">Sharing your listens</string>
...
    <string name="your_listening_experience">Your listening experience</string>
    <string name="your_lyrics_card">Your lyrics card</string>
    <string name="your_replay">Your Replay</string>
    <plurals name="replay_artist_count">
        <item quantity="one">%1$s artist</item>
...
    <string name="clear_song_cache_title">Clear song cache?</string>
    <string name="clear_song_cache_warning">All cached songs will be deleted and the Cached songs folder will be emptied. They will stream again the next time you play them.</string>
    <string name="import_spotify">Import Spotify</string>
    <string name="import_spotify_subtitle">From a playlist link</string>
    <string name="spotify_import_title">Import Spotify playlist</string>
...
